people/john-storey/TrainingProjects/FFLIB_sfMIL_Examples/src/objects/core_EventConsumerSubscription__mdt.object
<CustomObject>
    <fields>
        <fullName>Consumer__c</fullName>
        <description>Specifies the Apex class, implementing the core_IEventsConsumer interface, that will process the event.</description>
        <inlineHelpText>Specifies the Apex class, implementing the core_IEventsConsumer interface, that will process the event.</inlineHelpText>
        <label>Consumer</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventBus__c</fullName>
        <description>Specifies the broad realm of events the Subscriber wants to receive.</description>
        <inlineHelpText>Specifies the broad realm of events the Subscriber wants to receive.</inlineHelpText>
        <label>Event Bus</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventCategory__c</fullName>
        <description>Categories from which the subscriber wants events.</description>
        <inlineHelpText>Categories from which the subscriber wants events.</inlineHelpText>
        <label>Event Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <description>Unique name for the event.</description>
        <inlineHelpText>Unique name for the event.</inlineHelpText>
        <label>Event Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked (true), the distributor sends matching events to the subscriber.</description>
        <inlineHelpText>When checked (true), the distributor sends matching events to the subscriber.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatcherRule__c</fullName>
        <description>Instructs the Distributor the manner in which an event should be matched to the Subscriber.

Current matcher rules:
    MatchPlatformEventBusAndCategoryAndEventName
    MatchPlatformEventBusAndCategory
    MatchPlatformEventBusAndEventName
    MatchPlatformEventBus</description>
        <inlineHelpText>Instructs the Distributor the manner in which an event should be matched to the Subscriber.</inlineHelpText>
        <label>Matcher Rule</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Platform Event Consumer</label>
    <pluralLabel>Platform Event Consumers</pluralLabel>
</CustomObject>